first section done

--- a/index.html
+++ b/index.html
@@ -10,7 +10,94 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1>Hello world</h1>
-    <i class="fas fa-play"></i>
+    <!-- FRONT PAGE -->
+    <section class="front-page">
+      <nav class="navigation">
+        <a href="" class="logo-link"
+          ><img src="img/goit-logo.svg" alt="logo"
+        /></a>
+        <a href="" class="hire-me-btn">— HIRE ME</a>
+        <div class="menu">
+          <span class="menu-global menu-top"></span>
+          <span class="menu-global menu-middle"></span>
+          <span class="menu-global menu-bottom"></span>
+        </div>
+      </nav>
+      <h1 class="front-page-my-name">[Alex Lomov]</h1>
+      <h2 class="front-page-profession">{FRONTEND} _DEVELOPER</h2>
+      <p class="front-page-description">
+        / Using HTML, CSS, JavaScript, React Native and Node.js I help to build
+        websites, small and medium web apps for business
+      </p>
+      <button class="my-works-btn">See my recent works —</button>
+      <img class="my-photo" src="img/my-photo.jpg" alt="photo" />
+      <h3 class="about-me">about me in 2 minutes</h3>
+      <button class="about-me-btn">
+        <img
+          class="about-me-btn--icon"
+          src="img/About me/Polygon 1.svg"
+          alt="play-icon"
+        />Play
+      </button>
+      <img class="laptop-img" src="img/laptop.svg" alt="laptop" />
+      <h3 class="about-me my-skills">My Coding Skills & Experience</h3>
+      <ul class="my-skills-list">
+        <li>
+          <img src="/img/Skills/Ellipse_1.svg" alt="ellipse" /><img
+            src="/img/Skills/Ellipse_1.svg"
+            alt="ellipse"
+          /><img src="/img/Skills/Ellipse_1.svg" alt="ellipse" /><img
+            src="/img/Skills/Ellipse_1.svg"
+            alt="ellipse"
+          /><img src="/img/Skills/Ellipse_1.svg" alt="ellipse" />HTML
+        </li>
+        <li>
+          <img src="/img/Skills/Ellipse_1.svg" alt="ellipse" /><img
+            src="/img/Skills/Ellipse_1.svg"
+            alt="ellipse"
+          /><img src="/img/Skills/Ellipse_1.svg" alt="ellipse" /><img
+            src="/img/Skills/Ellipse_1.svg"
+            alt="ellipse"
+          /><img src="/img/Skills/Ellipse_1.svg" alt="ellipse" />CSS
+        </li>
+        <li>
+          <img src="/img/Skills/Ellipse_1.svg" alt="ellipse" /><img
+            src="/img/Skills/Ellipse_1.svg"
+            alt="ellipse"
+          /><img src="/img/Skills/Ellipse_1.svg" alt="ellipse" /><img
+            src="/img/Skills/Ellipse_1.svg"
+            alt="ellipse"
+          /><img src="/img/Skills/Ellipse_2.svg" alt="ellipse" />JavaScript
+        </li>
+        <li>
+          <img src="/img/Skills/Ellipse_1.svg" alt="ellipse" /><img
+            src="/img/Skills/Ellipse_1.svg"
+            alt="ellipse"
+          /><img src="/img/Skills/Ellipse_1.svg" alt="ellipse" /><img
+            src="/img/Skills/Ellipse_2.svg"
+            alt="ellipse"
+          /><img src="/img/Skills/Ellipse_2.svg" alt="ellipse" />React
+        </li>
+        <li>
+          <img src="/img/Skills/Ellipse_1.svg" alt="ellipse" /><img
+            src="/img/Skills/Ellipse_1.svg"
+            alt="ellipse"
+          /><img src="/img/Skills/Ellipse_2.svg" alt="ellipse" /><img
+            src="/img/Skills/Ellipse_2.svg"
+            alt="ellipse"
+          /><img src="/img/Skills/Ellipse_2.svg" alt="ellipse" />Node
+        </li>
+        <li>
+          <img src="/img/Skills/Ellipse_1.svg" alt="ellipse" /><img
+            src="/img/Skills/Ellipse_1.svg"
+            alt="ellipse"
+          /><img src="/img/Skills/Ellipse_2.svg" alt="ellipse" /><img
+            src="/img/Skills/Ellipse_2.svg"
+            alt="ellipse"
+          /><img src="/img/Skills/Ellipse_2.svg" alt="ellipse" />React Native
+        </li>
+      </ul>
+    </section>
+    <script src="/js/script.js"></script>
   </body>
 </html>
