--- a/index.html
+++ b/index.html
@@ -10,94 +10,269 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <!-- FRONT PAGE -->
-    <section class="front-page">
-      <nav class="navigation">
-        <a href="" class="logo-link"
-          ><img src="img/goit-logo.svg" alt="logo"
-        /></a>
-        <a href="" class="hire-me-btn">— HIRE ME</a>
-        <div class="menu">
-          <span class="menu-global menu-top"></span>
-          <span class="menu-global menu-middle"></span>
-          <span class="menu-global menu-bottom"></span>
+    <div class="wrapper">
+      <!-- FRONT PAGE -->
+      <section class="front-page">
+        <nav class="navigation">
+          <a href="" class="logo-link"
+            ><img src="img/goit-logo.svg" alt="logo"
+          /></a>
+          <a href="" class="hire-me-btn">— HIRE ME</a>
+          <div class="menu">
+            <span class="menu-global menu-top"></span>
+            <span class="menu-global menu-middle"></span>
+            <span class="menu-global menu-bottom"></span>
+          </div>
+        </nav>
+        <h1 class="front-page-my-name">[Alex Lomov]</h1>
+        <h2 class="section-title">{FRONTEND} _DEVELOPER</h2>
+        <p class="front-page-description">
+          / Using HTML, CSS, JavaScript, React Native and Node.js I help to
+          build websites, small and medium web apps for business
+        </p>
+        <button class="my-works-btn">See my recent works —</button>
+        <img class="my-photo" src="img/my-photo.jpg" alt="photo" />
+        <h3 class="about-me">about me in 2 minutes</h3>
+        <button class="about-me-btn">
+          <img
+            class="about-me-btn--icon"
+            src="img/About me/Polygon 1.svg"
+            alt="play-icon"
+          />Play
+        </button>
+        <img class="laptop-img" src="img/laptop.svg" alt="laptop" />
+        <h3 class="about-me my-skills">My Coding Skills & Experience</h3>
+        <ul class="my-skills-list">
+          <li>
+            <i class="far fa-circle"></i>
+            <i class="far fa-circle"></i>
+            <i class="far fa-circle"></i>
+            <i class="far fa-circle"></i>
+            <i class="far fa-circle"></i>
+            HTML
+          </li>
+          <li>
+            <i class="far fa-circle"></i>
+            <i class="far fa-circle"></i>
+            <i class="far fa-circle"></i>
+            <i class="far fa-circle"></i>
+            <i class="far fa-circle"></i>
+            CSS
+          </li>
+          <li>
+            <i class="far fa-circle"></i>
+            <i class="far fa-circle"></i>
+            <i class="far fa-circle"></i>
+            <i class="far fa-circle"></i>
+            <i class="far fa-circle circle--black"></i>
+            JavaScript
+          </li>
+          <li>
+            <i class="far fa-circle"></i>
+            <i class="far fa-circle"></i>
+            <i class="far fa-circle"></i>
+            <i class="far fa-circle circle--black"></i>
+            <i class="far fa-circle circle--black"></i>
+            React
+          </li>
+          <li>
+            <i class="far fa-circle"></i>
+            <i class="far fa-circle"></i>
+            <i class="far fa-circle circle--black"></i>
+            <i class="far fa-circle circle--black"></i>
+            <i class="far fa-circle circle--black"></i>
+            Node
+          </li>
+          <li>
+            <i class="far fa-circle"></i>
+            <i class="far fa-circle"></i>
+            <i class="far fa-circle circle--black"></i>
+            <i class="far fa-circle circle--black"></i>
+            <i class="far fa-circle circle--black"></i>
+            React Native
+          </li>
+        </ul>
+      </section>
+      <!-- FRONT PAGE END -->
+      <!-- ABOUT PAGE -->
+      <section class="about-page">
+        <h2 class="section-title page-title">I code things from scratch_</h2>
+        <p class="about-me--title">
+          <span>[and help to</span>
+          <span>create great web</span>
+          <span>apps]</span>
+        </p>
+        <div class="web-illustration">
+          <span>web</span>
+          <img src="/img/web-illustration.png" alt="web-illustration-laptop" />
+          <div class="about-me--text">
+            <p>
+              / I will help you to create a high-performance Landing Page,
+              functional corporate website for your business, interactive web
+              app for SaaS, startup, or other services.
+            </p>
+            <p>
+              / My specialization is front-end development — client side of the
+              web. But I also have full-stack developer experience.
+            </p>
+          </div>
         </div>
-      </nav>
-      <h1 class="front-page-my-name">[Alex Lomov]</h1>
-      <h2 class="front-page-profession">{FRONTEND} _DEVELOPER</h2>
-      <p class="front-page-description">
-        / Using HTML, CSS, JavaScript, React Native and Node.js I help to build
-        websites, small and medium web apps for business
-      </p>
-      <button class="my-works-btn">See my recent works —</button>
-      <img class="my-photo" src="img/my-photo.jpg" alt="photo" />
-      <h3 class="about-me">about me in 2 minutes</h3>
-      <button class="about-me-btn">
-        <img
-          class="about-me-btn--icon"
-          src="img/About me/Polygon 1.svg"
-          alt="play-icon"
-        />Play
-      </button>
-      <img class="laptop-img" src="img/laptop.svg" alt="laptop" />
-      <h3 class="about-me my-skills">My Coding Skills & Experience</h3>
-      <ul class="my-skills-list">
-        <li>
-          <img src="/img/Skills/Ellipse_1.svg" alt="ellipse" /><img
-            src="/img/Skills/Ellipse_1.svg"
-            alt="ellipse"
-          /><img src="/img/Skills/Ellipse_1.svg" alt="ellipse" /><img
-            src="/img/Skills/Ellipse_1.svg"
-            alt="ellipse"
-          /><img src="/img/Skills/Ellipse_1.svg" alt="ellipse" />HTML
-        </li>
-        <li>
-          <img src="/img/Skills/Ellipse_1.svg" alt="ellipse" /><img
-            src="/img/Skills/Ellipse_1.svg"
-            alt="ellipse"
-          /><img src="/img/Skills/Ellipse_1.svg" alt="ellipse" /><img
-            src="/img/Skills/Ellipse_1.svg"
-            alt="ellipse"
-          /><img src="/img/Skills/Ellipse_1.svg" alt="ellipse" />CSS
-        </li>
-        <li>
-          <img src="/img/Skills/Ellipse_1.svg" alt="ellipse" /><img
-            src="/img/Skills/Ellipse_1.svg"
-            alt="ellipse"
-          /><img src="/img/Skills/Ellipse_1.svg" alt="ellipse" /><img
-            src="/img/Skills/Ellipse_1.svg"
-            alt="ellipse"
-          /><img src="/img/Skills/Ellipse_2.svg" alt="ellipse" />JavaScript
-        </li>
-        <li>
-          <img src="/img/Skills/Ellipse_1.svg" alt="ellipse" /><img
-            src="/img/Skills/Ellipse_1.svg"
-            alt="ellipse"
-          /><img src="/img/Skills/Ellipse_1.svg" alt="ellipse" /><img
-            src="/img/Skills/Ellipse_2.svg"
-            alt="ellipse"
-          /><img src="/img/Skills/Ellipse_2.svg" alt="ellipse" />React
-        </li>
-        <li>
-          <img src="/img/Skills/Ellipse_1.svg" alt="ellipse" /><img
-            src="/img/Skills/Ellipse_1.svg"
-            alt="ellipse"
-          /><img src="/img/Skills/Ellipse_2.svg" alt="ellipse" /><img
-            src="/img/Skills/Ellipse_2.svg"
-            alt="ellipse"
-          /><img src="/img/Skills/Ellipse_2.svg" alt="ellipse" />Node
-        </li>
-        <li>
-          <img src="/img/Skills/Ellipse_1.svg" alt="ellipse" /><img
-            src="/img/Skills/Ellipse_1.svg"
-            alt="ellipse"
-          /><img src="/img/Skills/Ellipse_2.svg" alt="ellipse" /><img
-            src="/img/Skills/Ellipse_2.svg"
-            alt="ellipse"
-          /><img src="/img/Skills/Ellipse_2.svg" alt="ellipse" />React Native
-        </li>
-      </ul>
-    </section>
+      </section>
+      <!-- ABOUT PAGE END -->
+      <!-- PERSONAL PROJECTS -->
+      <section class="my-projects">
+        <h2 class="section-title">My personal _projects</h2>
+        <div class="project-item">
+          <div class="project-slider">
+            <div class="dots">
+              <i class="fas fa-circle project-dot"></i>
+              <i class="fas fa-circle project-dot"></i>
+              <i class="fas fa-circle project-dot"></i>
+            </div>
+            <img
+              src="/img/projects/personal/full-stack.jpg"
+              alt="first-project"
+            />
+          </div>
+          <div class="project-tech">
+            <span>
+              <i class="fas fa-laptop-code personal-project-icon"></i
+              >Technology: HTML5, CSS3, JS
+            </span>
+            <button class="my-works-btn show-more--btn">More details —</button>
+          </div>
+          <span class="item-end"></span>
+        </div>
+        <div class="project-item">
+          <div class="project-slider">
+            <div class="dots">
+              <i class="fas fa-circle project-dot"></i>
+              <i class="fas fa-circle project-dot"></i>
+              <i class="fas fa-circle project-dot"></i>
+            </div>
+            <img
+              src="/img/projects/personal/wedding.jpg"
+              alt="second-project"
+            />
+          </div>
+          <div class="project-tech">
+            <span>
+              <i class="fas fa-laptop-code personal-project-icon"></i
+              >Technology: HTML, CSS, JavaScript, PHP
+            </span>
+            <button class="my-works-btn show-more--btn">More details —</button>
+          </div>
+          <span class="item-end"></span>
+        </div>
+        <div class="project-item">
+          <div class="project-slider">
+            <div class="dots">
+              <i class="fas fa-circle project-dot"></i>
+              <i class="fas fa-circle project-dot"></i>
+              <i class="fas fa-circle project-dot"></i>
+            </div>
+            <img
+              src="/img/projects/personal/pro-test.jpg"
+              alt="third-project"
+            />
+          </div>
+          <div class="project-tech">
+            <span>
+              <i class="fas fa-laptop-code personal-project-icon"></i
+              >Technology: React.js, Node.js
+            </span>
+            <button class="my-works-btn show-more--btn">More details —</button>
+          </div>
+          <span class="item-end"></span>
+        </div>
+        <div class="project-item">
+          <div class="project-slider">
+            <div class="dots">
+              <i class="fas fa-circle project-dot"></i>
+              <i class="fas fa-circle project-dot"></i>
+              <i class="fas fa-circle project-dot"></i>
+            </div>
+            <img src="/img/projects/personal/goit.jpg" alt="fourth-project" />
+          </div>
+          <div class="project-tech">
+            <span>
+              <i class="fas fa-laptop-code personal-project-icon"></i
+              >Technology: HTML, CSS, JavaScript, Wordpress
+            </span>
+            <button class="my-works-btn show-more--btn">More details —</button>
+          </div>
+          <span class="item-end"></span>
+        </div>
+      </section>
+      <!-- PERSONAL PROJECTS END -->
+      <!-- TEAM PROJECTS -->
+      <section class="my-team-projects">
+        <span class="substrate">team</span>
+        <h2 class="section-title">Teamwork _projects</h2>
+        <div class="project-item">
+          <div class="project-slider">
+            <div class="dots">
+              <i class="fas fa-circle project-dot"></i>
+              <i class="fas fa-circle project-dot"></i>
+              <i class="fas fa-circle project-dot"></i>
+            </div>
+            <img src="/img/projects/team/questify.jpg" alt="first-project" />
+          </div>
+          <div class="project-tech">
+            <span>
+              <i class="fas fa-laptop-code personal-project-icon"></i
+              >Technology: HTML5, CSS3, JS
+            </span>
+            <button class="my-works-btn show-more--btn">More details —</button>
+          </div>
+          <span class="item-end"></span>
+        </div>
+        <div class="project-item">
+          <div class="project-slider">
+            <div class="dots">
+              <i class="fas fa-circle project-dot"></i>
+              <i class="fas fa-circle project-dot"></i>
+              <i class="fas fa-circle project-dot"></i>
+            </div>
+            <img src="/img/projects/team/it-test.jpg" alt="second-project" />
+          </div>
+          <div class="project-tech">
+            <span>
+              <i class="fas fa-laptop-code personal-project-icon"></i
+              >Technology: HTML5, CSS3, JS
+            </span>
+            <button class="my-works-btn show-more--btn">More details —</button>
+          </div>
+          <span class="item-end"></span>
+        </div>
+      </section>
+      <!-- TEAM PROJECTS END -->
+      <!-- CALLBACK FORM -->
+      <section class="callback">
+        <div class="form-container">
+          <form action="" class="callback-form">
+            <h3 class="form-title">/Are you minding [a project?]</h3>
+            <p class="form-description">
+              Leave a request to discuss the task and technical requirements
+            </p>
+            <input type="text" class="callback-form-input" placeholder="Name" />
+            <input
+              type="email"
+              class="callback-form-input"
+              placeholder="Email"
+            />
+            <input
+              type="tel"
+              class="callback-form-input"
+              placeholder="Phone"
+              pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"
+            />
+            <input type="submit" class="callback-form-submit" value="Discuss the project  —" />
+          </form>
+        </div>
+      </section>
+      <!-- CALLBACK FORM END-->
+    </div>
     <script src="/js/script.js"></script>
   </body>
 </html>
