added all modal windows

--- a/index.html
+++ b/index.html
@@ -148,7 +148,12 @@
               <i class="fas fa-laptop-code personal-project-icon"></i
               >Technology: HTML5, CSS3, JS
             </span>
-            <button class="my-works-btn show-more--btn">More details —</button>
+            <button
+              class="my-works-btn show-more--btn"
+              id="personal-project-full-stack-btn"
+            >
+              More details —
+            </button>
           </div>
           <span class="item-end"></span>
         </div>
@@ -169,7 +174,12 @@
               <i class="fas fa-laptop-code personal-project-icon"></i
               >Technology: HTML, CSS, JavaScript, PHP
             </span>
-            <button class="my-works-btn show-more--btn">More details —</button>
+            <button
+              class="my-works-btn show-more--btn"
+              id="personal-project-wedding-project-btn"
+            >
+              More details —
+            </button>
           </div>
           <span class="item-end"></span>
         </div>
@@ -190,7 +200,12 @@
               <i class="fas fa-laptop-code personal-project-icon"></i
               >Technology: React.js, Node.js
             </span>
-            <button class="my-works-btn show-more--btn">More details —</button>
+            <button
+              class="my-works-btn show-more--btn"
+              id="personal-project-pro-test-btn"
+            >
+              More details —
+            </button>
           </div>
           <span class="item-end"></span>
         </div>
@@ -208,7 +223,12 @@
               <i class="fas fa-laptop-code personal-project-icon"></i
               >Technology: HTML, CSS, JavaScript, Wordpress
             </span>
-            <button class="my-works-btn show-more--btn">More details —</button>
+            <button
+              class="my-works-btn show-more--btn"
+              id="personal-project-goit-btn"
+            >
+              More details —
+            </button>
           </div>
           <span class="item-end"></span>
         </div>
@@ -232,7 +252,12 @@
               <i class="fas fa-laptop-code personal-project-icon"></i
               >Technology: HTML5, CSS3, JS
             </span>
-            <button class="my-works-btn show-more--btn">More details —</button>
+            <button
+              class="my-works-btn show-more--btn"
+              id="team-project-questify-btn"
+            >
+              More details —
+            </button>
           </div>
           <span class="item-end"></span>
         </div>
@@ -250,7 +275,12 @@
               <i class="fas fa-laptop-code personal-project-icon"></i
               >Technology: HTML5, CSS3, JS
             </span>
-            <button class="my-works-btn show-more--btn">More details —</button>
+            <button
+              class="my-works-btn show-more--btn"
+              id="team-project-it-test-btn"
+            >
+              More details —
+            </button>
           </div>
           <span class="item-end"></span>
         </div>
@@ -479,11 +509,201 @@
             </p>
           </div>
         </div>
+        <!-- PERSONAL PROJECTS FULL STACK -->
+
+        <div class="modal project-modal" id="personal-project-full-stack">
+          <div class="project-modal-container">
+            <i class="fas fa-times modal-close-btn"></i>
+
+            <div class="project-modal-scrollable">
+              <img
+                class="project-modal-img"
+                src="img/projects/personal/full-stack.jpg"
+                alt="full stack project image 1"
+              />
+
+              <a
+                href="https://fullstackonline.goit.ua/"
+                class="project-modal-title"
+                >Goit Full Stack разработчик</a
+              >
+
+              <p class="project-modal-text">
+                "Одностраничный лендинг с использованием HTML и CSS. Сайт
+                рассказывает потенциальным клиентам о преимуществах обучения на
+                курсе, программе, стоимости и длительности занятий.
+              </p>
+
+              <p class="project-modal-text">
+                Также на сайте добавлена форма обратной связи, соцсети и
+                возможность посмотреть видео-отзывы выпускников, не уходя на
+                внешние ресурсы. Компактно и в доступной форме дана вся
+                информация о курсе, преподавателях и процессе обучения. Формат
+                сайта подходит для небольших компаний или раскрытия информации о
+                конкретном продукте."
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- PERSONAL PROJECTS WEDDING -->
+
+        <div class="modal project-modal" id="personal-project-wedding-project">
+          <div class="project-modal-container">
+            <i class="fas fa-times modal-close-btn"></i>
+
+            <div class="project-modal-scrollable">
+              <img
+                class="project-modal-img"
+                src="img/projects/personal/wedding.jpg"
+                alt="wedding project image 1"
+              />
+
+              <a href="https://www.beeruza.com.ua/" class="project-modal-title"
+                >Beeruza - свадебные пригласительные и аксессуары</a
+              >
+
+              <p class="project-modal-text">
+                "Интернет-магазин свадебных принадлежностей. Сайт предназначен
+                для подготовки к свадьбе. Он экономит время и позволяет купить
+                все аксессуары для свадьбы в одном месте: приглашения, декор,
+                открытки, планер. Также можно заказать звонок и задать все
+                вопросы по телефону.
+              </p>
+
+              <p class="project-modal-text">
+                Чтобы приобрести выбранные товары из нужно положить в корзину и
+                оплатить удобным способом. Формат сайта подходит для бизнеса и
+                продажи товаров."
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- PERSONAL PROJECTS PRO-TEST -->
+
+        <div class="modal project-modal" id="personal-project-pro-test">
+          <div class="project-modal-container">
+            <i class="fas fa-times modal-close-btn"></i>
+
+            <div class="project-modal-scrollable">
+              <img
+                class="project-modal-img"
+                src="img/projects/personal/pro-test.jpg"
+                alt="pro-test project image 1"
+              />
+
+              <a href="https://pro-test.goit.co.ua/" class="project-modal-title"
+                >Pro test - техническая подготовка QA</a
+              >
+
+              <p class="project-modal-text">
+                Веб-приложение Pro Test поможет начинающему и опытному
+                QA-инженеру оценить уровень своих знаний. В данном приложении
+                реализована регистрация и логинизация пользователя через google
+                account, а также через e-mail и пароль. После чего пользователь
+                может пройти тест и увидеть его результаты.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- PERSONAL PROJECTS GOIT -->
+
+        <div class="modal project-modal" id="personal-project-goit">
+          <div class="project-modal-container">
+            <i class="fas fa-times modal-close-btn"></i>
+
+            <div class="project-modal-scrollable">
+              <img
+                class="project-modal-img"
+                src="img/projects/personal/goit.jpg"
+                alt="goit project image 1"
+              />
+
+              <a href="https://goit.ua/" class="project-modal-title"
+                >GoIT - курсы программирования</a
+              >
+
+              <p class="project-modal-text">
+                Многостраничный сайт с использованием HTML, CSS и JavaScript. На
+                сайте есть форма обратной связи и pop-up, который появляется
+                через 30 секунд вашего присутствия на сайте.
+              </p>
+
+              <p class="project-modal-text">
+                Также на сайте есть отдельная страница курсов, с последующим
+                переходом на лендинг каждого отдельного курса. Постоянная
+                рубрика Journal сделана в виде блога с полезной информацией для
+                начинающих разработчиков.
+              </p>
+
+              <p class="project-modal-text">
+                На сайте есть отзывы выпускников, контакты для связи и события
+                компании. Кнопка в правом углу переводит пользователя в
+                телеграм-бот, где он может создать свой собственный сайт с
+                автопроверкой заданий.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- TEAM PROJECTS FULL STACK -->
+
+        <div class="modal project-modal" id="team-project-questify">
+          <div class="project-modal-container">
+            <i class="fas fa-times modal-close-btn"></i>
+
+            <div class="project-modal-scrollable">
+              <img
+                class="project-modal-img"
+                src="img/projects/team/questify.jpg"
+                alt="Questify project image 1"
+              />
+
+              <a href="https://questify.goit.co.ua/" class="project-modal-title"
+                >Questify - turn your life into a thrilling game</a
+              >
+
+              <p class="project-modal-text">
+                Увлекательное веб-приложение, которое призвано помочь превратить
+                рутинные задачи в увлекательные квесты и захватывающие челенджи,
+                которые система сама ставит перед пользователем.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- TEAM PROJECTS TEST IT -->
+
+        <div class="modal project-modal" id="team-project-it-test">
+          <div class="project-modal-container">
+            <i class="fas fa-times modal-close-btn"></i>
+
+            <div class="project-modal-scrollable">
+              <img
+                class="project-modal-img"
+                src="img/projects/team/it-test.jpg"
+                alt="it-test project image 1"
+              />
+
+              <a href="https://testit.co.ua/" class="project-modal-title"
+                >Тест на профессиональную личность в IT
+              </a>
+
+              <p class="project-modal-text">
+                Web-приложение, которое поможет родителям определиться к какой
+                профессии в IT склонен их ребенок.
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
       <!-- MODALS END -->
     </div>
     <script src="/js/choices.min.js"></script>
     <script src="/js/calculator.js"></script>
+    <script src="/js/modals.js"></script>
     <script src="/js/script.js"></script>
   </body>
 </html>
