--- a/index.html
+++ b/index.html
@@ -294,17 +294,23 @@
             <p class="form-description">
               Leave a request to discuss the task and technical requirements
             </p>
-            <input type="text" class="callback-form-input" placeholder="Name" />
+            <input
+              type="text"
+              class="callback-form-input"
+              placeholder="Name"
+              id="callback-form-input-name"
+            />
             <input
               type="email"
               class="callback-form-input"
               placeholder="Email"
+              id="callback-form-input-email"
             />
             <input
               type="tel"
               class="callback-form-input"
-              placeholder="Phone"
-              pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"
+              placeholder="+380 () ___ - __ - __"
+              id="callback-form-input-phone"
             />
             <input
               type="submit"
@@ -701,6 +707,7 @@
       </div>
       <!-- MODALS END -->
     </div>
+    <script src="/js/callbackForm.js"></script>
     <script src="/js/choices.min.js"></script>
     <script src="/js/calculator.js"></script>
     <script src="/js/modals.js"></script>
